20000212-02:30 GMT+1 Victor Szakats <info@szelvesz.hu>
   * include/gtapi.h
     + NOTE: added about incompatibilities between Harbour and CA-Cl*pper
       GT interface.
   * makefile.b32
     - Removed -v option (debug info) from 4.0 mode.

2000-02-11 19:15 GMT-5 David G. Holm <dholm@ sd-llc.com>
   * source/rtl/inkey.c
     ! First pass at international character support for Windows console mode.

20000211-23:05 GMT+1 Victor Szakats <info@szelvesz.hu>
   * make*.bat
     * The different make systems generate log files with different names.

20000211-22:31 GMT+1 Victor Szakats <info@szelvesz.hu>
   * makefile.vc
     ! Modified to generate all the intermediate .c/.y/.l files in the obj dir
       instead of the original files' dir, since this way the make process
       is not conflicting with the GNU-make system, so they can be used in
       parallel.
     * HBDOC is generated in the BIN directory.
     + RT_MAIN generation added.
     + Added nulsys.lib
   + obj/b16/empty
   + obj/b32/empty
   + obj/vc/empty
   * makefile.b32
     makefile.b16
     makefile.vc
     + From now on the intermediate files are generated in the obj\b16,
       obj\b32 and obj\vc depending on the build system. This way the Borland
       and Microsoft make systems will not conflict and can be used in parallel.

20000211-19:37 GMT+1 Victor Szakats <info@szelvesz.hu>
   * ha.lnk      -> categ.lnk
     harbour.lnk -> alpha.lnk
     harbour.rsp -> hrb.rsp
     harbwww.rps -> hrbtools.rsp
     makewww.bat -> genhtm.bat
     * Some files renamed.

20000211-19:11 GMT+1 Victor Szakats <info@szelvesz.hu>
   * source/rtl/Makefile
     - readvar.prg removed.
   * doc/harbext.txt 
     + CVD ID added
       !! Please remember to add this to every file CVS-d !!
   * tests/bld_b16.bat 
     tests/bld_b32.bat 
     tests/bld_b32o.bat
     tests/bld_b32w.bat
     tests/bld_vc.bat  
     * Files moved to the bin\ directory.
   - tests/test_all.lnk